--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -18,3 +18,30 @@
     --toast-success: #0CBFAE;
     --loader-color: #0CBFAE
 }
+.App {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+      background-color: #1a142a;
+
+}
+h2{
+    border: 3px solid #43a5e3;
+    border-radius: 10px;
+    box-sizing: border-box;
+    -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
+    filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
+    height: 70px;
+    position: relative;
+    width: 500px;
+    margin: 20px;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(272.38deg, #43a5e3 46.06%, #f408e8 81.53%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    font-size: 40px;
+    padding: 10px;
+    text-align: center;
+}
