--- a/portfolio/src/Portfolio/Home/Home.css
+++ b/portfolio/src/Portfolio/Home/Home.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 670px;
-    background-image: url("../../assets/image/bg.jpg");
+      background-color: #1a142a;
+
 }
 
 
