--- a/portfolio/src/Portfolio/Home/Footer/Footer.css
+++ b/portfolio/src/Portfolio/Home/Footer/Footer.css
@@ -20,5 +20,11 @@
     align-items: flex-end;
   }
 }
+@media only screen and (max-width: 450px) {
+  .footer-parent {
+  display: none;
+  }
+
+}
 
 
