--- a/portfolio/src/Portfolio/Skills/Card.css
+++ b/portfolio/src/Portfolio/Skills/Card.css
@@ -60,3 +60,10 @@
     /* height: 120px; */
     color: antiquewhite;
 }
+
+@media screen  and (max-width: 1000px) {
+ .carts {
+  width: 300px;
+  margin: 0 10px ;
+ }
+  }
