--- a/portfolio/src/Portfolio/Home/Profile.css
+++ b/portfolio/src/Portfolio/Home/Profile.css
@@ -47,15 +47,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow:    0 1px 0 0 var(--white);
+  box-shadow: 0 1px 0 0 var(--white);
   width: 380px;
   height: 380px;
   margin: 0 0 0 100px;
-  border-radius: 50% ;
-  -webkit-border-radius: 50% ;
-  -moz-border-radius: 50% ;
-  -ms-border-radius: 50% ;
-  -o-border-radius: 50% ;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .profile-picture-background {
   height: 92%;
@@ -125,8 +125,12 @@
     margin: 0 !important;
   }
   .profile-parent {
+    display: flex;
     flex-direction: column-reverse;
-    margin: 40px 0 0 0;
+    justify-content: center;
+    align-items: center;
+    margin:0;
+    left: 0;
   }
   .profile-options {
     display: flex;
@@ -143,72 +147,43 @@
     text-align: center;
   }
 }
-@media screen and (max-width: 375px) {
-  .profile-picture {
-    height: 275px;
-    height: 275px;
-    margin-top: -90px;
+
+@media screen and (max-width: 500px) {
+  .profile-container {
+    display: flex;
+    width: 500px;
+    flex-direction: column;
   }
-  .profile-details {
+  .profile-parent {
     width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    left: 0;
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 375px) {
+  .profile-container {
+    width: 375px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+  .profile-parent {
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 5px;
+    left: 0;
+  }
+}
