--- a/portfolio/src/Portfolio/Navbar/Navbar.css
+++ b/portfolio/src/Portfolio/Navbar/Navbar.css
@@ -78,3 +78,11 @@ ul {
   margin-top: 0;
   font-weight: 700;
 }
+
+
+@media screen and  (max-width: 650px) {
+  .profile-navbar {
+    display: none;
+  }
+  
+}
