--- a/src/Portfolio/Home/Profile.css
+++ b/src/Portfolio/Home/Profile.css
@@ -134,7 +134,7 @@
   }
   .profile-options {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   .profile-details {
     margin: 25px 0 0;
