--- a/src/Portfolio/Navbar/Navbar.css
+++ b/src/Portfolio/Navbar/Navbar.css
@@ -1,14 +1,139 @@
-/*  profile navbar */
+.vertical-navbar {
+  display: none;
+}
+#menuToggle {
+  display: block;
+  position: relative;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a {
+  text-decoration: none;
+  color: #232323;
+  transition: color 0.3s ease;
+  -webkit-transition: color 0.3s ease;
+  -moz-transition: color 0.3s ease;
+  -ms-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+  color: tomato;
+}
+#menuToggle input {
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #fff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -moz-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -ms-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -o-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #fff;
+  -webkit-transform: rotate(45deg) translate(-2px, -1px);
+  -moz-transform: rotate(45deg) translate(-2px, -1px);
+  -ms-transform: rotate(45deg) translate(-2px, -1px);
+  -o-transform: rotate(45deg) translate(-2px, -1px);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+  -moz-transform: rotate(0deg) scale(0.2, 0.2);
+  -ms-transform: rotate(0deg) scale(0.2, 0.2);
+  -o-transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+  -webkit-transform: rotate(-45deg) translate(0, -1px);
+  -moz-transform: rotate(-45deg) translate(0, -1px);
+  -ms-transform: rotate(-45deg) translate(0, -1px);
+  -o-transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  width: 250px;
+  height: 450px;
+  padding-top: 5px;
+  background: #1a142a;
+  list-style-type: none;
+  transform-origin: 0% 0%;
+  transform: translate(-50%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -moz-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -ms-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -o-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  opacity: 0;
+}
+#menu li {
+  color: #fff;
+  padding: 10px;
+  font-size: 22px;
+}
+
+#menuToggle input:checked ~ ul {
+  opacity: 1;
+}
+
 /*  */
+
 .horizontal-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 1000px;
   height: 150px;
-  margin:  auto  ;
+  margin: auto;
   padding: auto;
- color: #fff;
+  color: #fff;
 }
 
 .horizontal-navbar ul {
@@ -69,20 +194,25 @@ ul {
   margin-top: 40px;
 }
 
-#scroll ul a:first-child {
-  margin-top: 0;
-  font-weight: 700;
-}
-
-#scroll ul a:first-child {
-  margin-top: 0;
-  font-weight: 700;
-}
-
-
-@media screen and  (max-width: 650px) {
+@media screen and (max-width: 650px) {
   .profile-navbar {
     display: none;
   }
-  
+
+}
+
+@media screen and (max-width: 800px) {
+ .vertical-navbar {
+  display: flex;
+  justify-content: space-around;
+align-items: center;
+height: 150px;
+color: #fff;
+ }
+ .horizontal-navbar {
+  display: none;
+ }
+ .vertical-navbar #menu {
+  width: 500px;
+ }
 }
