--- a/src/Portfolio/Skills/Card.css
+++ b/src/Portfolio/Skills/Card.css
@@ -43,27 +43,70 @@
 .carts:nth-child(5) {
   background: linear-gradient(to bottom, #5073a7, #23263b);
 }
-.carts p,h3 {
+.carts p,
+h3 {
   font-size: 24px;
   padding: 10px;
   text-align: center;
   color: antiquewhite;
 }
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 .icon {
-    /* width: 120px; */
-    /* height: 120px; */
-    color: antiquewhite;
+  /* width: 120px; */
+  /* height: 120px; */
+  color: antiquewhite;
 }
 
-@media screen  and (max-width: 1000px) {
- .carts {
-  width: 300px;
-  margin: 0 10px ;
- }
+@media screen and (max-width: 1000px) {
+  .carts {
+    width: 300px;
+    margin: 0 10px;
   }
+}
+@media screen and (max-width: 800px) {
+  .container {
+    padding: 5px;
+  }
+  .content {
+  width: 300px;
+  height: 450px;
+  margin: 20px auto;
+}
+.content p,
+h3 {
+  font-size: 20px;
+  text-align: center;
+  color: antiquewhite;
+}
+}
+@media screen and (max-width: 500px) {
+  .content {
+  width: 400px;
+  height: 450px;
+  margin: 20px auto;
+}
+.content p,
+h3 {
+  font-size: 20px;
+  text-align: center;
+  color: antiquewhite;
+}
+}
+@media screen and (max-width: 375px) {
+  .content {
+    width: 300px;
+    height: 450px;
+    margin: 20px auto;
+  }
+  .content p,
+  h3 {
+    font-size: 20px;
+    text-align: center;
+    color: antiquewhite;
+  }
+}
