--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root{
+/*:root{
     --light-blue : #04C3FF;
     --light-blue-shadow:  rgb(69 211 255 / 27%);
     --sea-green: #0ABEAD;
@@ -17,30 +17,11 @@
     --toast-shadow:  #9c9c9ce3;
     --toast-success: #0CBFAE;
     --loader-color: #0CBFAE
-}
+}*/
 .App {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     gap: 20px;
-      background-color: #1a142a;
+    background-color: #1a142a;
 
-}
-h2{
-    border: 3px solid #43a5e3;
-    border-radius: 10px;
-    box-sizing: border-box;
-    -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
-    filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
-    height: 70px;
-    position: relative;
-    width: 500px;
-    margin: 20px;
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(272.38deg, #43a5e3 46.06%, #f408e8 81.53%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    font-size: 40px;
-    padding: 10px;
-    text-align: center;
 }
