--- a/src/Portfolio/Skills/Skills.css
+++ b/src/Portfolio/Skills/Skills.css
@@ -1,72 +1,113 @@
-.skills {
+.skill {
+  width: 100%;
+}
+
+h2 {
+  border: 3px solid #43a5e3;
+  border-radius: 10px;
+  box-sizing: border-box;
+  -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.8));
+  filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.8));
+  height: 70px;
+  position: relative;
+  width: 350px;
+  margin-left: 60px;
+  margin-top: -60px;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(272.38deg, #43a5e3 46.06%, #f408e8 81.53%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-size: 40px;
+  padding: 10px;
+  text-align: center;
+}
+.progress-tech {
+  width: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
+  margin: auto;
+  gap: 30px;
+  border-bottom: #68b8ea 1px solid;
+  box-sizing: border-box;
+  -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.2));
+  filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.2));
+}
+.tech-label {
+  color: #fff;
+  font-family: DM Sans;
+  font-size: 36px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.progress-tech .technology {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30;
+}
+
+@media screen and (max-width: 800px) {
+  .progress-tech {
+    width: 75%;
+  }
+  .technology {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 0;
+  }
+  .tech-label {
+    width: 35%;
+    font-size: 36px;
+    font-weight: 400;
+    margin: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .progress-tech {
+    width: 100%;
+  }
+  .technology {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-}
-h2{
-    border: 3px solid #43a5e3;
-    border-radius: 10px;
-    box-sizing: border-box;
-    -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
-    filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .8));
-    height: 70px;
-    position: relative;
-    width: 350px;
-    margin-left: 60px;
-    margin-top: -60px;
-    -webkit-text-fill-color: transparent;
-    background: linear-gradient(272.38deg, #43a5e3 46.06%, #f408e8 81.53%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    font-size: 40px;
-    padding: 10px;
-    text-align: center;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    margin: 0;
+  }
+  .tech-label {
+    width: 35%;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0;
+    letter-spacing: 2px;
+  }
 }
 
-.progress-tech {
-    margin-bottom: 150px;
-    border-bottom: #68b8ea 1px solid;
-    box-sizing: border-box;
-    -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .2));
-    filter: drop-shadow(0 4px 30px rgba(67, 165, 227, .2));
+@media screen and (max-width: 375px) {
+  h2 {
+    width: 280px;
+  }
+  .progress-tech {
+    width: 100%;
+  }
+  .technology {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+  }
+  .tech-label {
+    width: 35%;
+    font-size: 15px;
+    font-weight: 400;
+    margin: 0 5px;
+    letter-spacing: 2px;
+  }
 }
-
-   
-   
-   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
