--- a/src/Portfolio/Navbar/Navbar.css
+++ b/src/Portfolio/Navbar/Navbar.css
@@ -1,3 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
+
+.contact {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap
+  ;
+  width: 100%;
+  background-color: #fff;
+}
+.contact div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact div h3 {
+  color: #1a142a;
+
+}
+
 .vertical-navbar {
   display: none;
 }
@@ -10,6 +31,7 @@
 }
 
 #menuToggle a {
+  font-family: "DM Sans";
   text-decoration: none;
   color: #232323;
   transition: color 0.3s ease;
@@ -18,15 +40,12 @@
   -ms-transition: color 0.3s ease;
   -o-transition: color 0.3s ease;
 }
-
-#menuToggle a:hover {
-  color: tomato;
-}
 #menuToggle input {
   display: flex;
   width: 40px;
   height: 32px;
   position: absolute;
+  text-decoration: none;
   cursor: pointer;
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
@@ -114,9 +133,13 @@
   opacity: 0;
 }
 #menu li {
+  font-family: "DM Sans";
   color: #fff;
   padding: 10px;
-  font-size: 22px;
+  font-size: 32px;
+    text-decoration: none;
+    list-style-type: none;
+
 }
 
 #menuToggle input:checked ~ ul {
@@ -134,6 +157,7 @@
   margin: auto;
   padding: auto;
   color: #fff;
+  text-decoration: none;
 }
 
 .horizontal-navbar ul {
@@ -142,14 +166,20 @@
   gap: 40px;
 }
 .profile-navbar {
-  color: #fff;
+  color: #232323;
 }
 
 a {
+  font-family: "DM Sans";
+  padding: 10px;
+  font-size: 24px;
   text-decoration: none;
   color: #ffffff;
 }
-
+a:hover {
+  text-decoration: none;
+  color: #ffff;
+}
 ul {
   list-style-type: none;
 }
@@ -165,20 +195,20 @@ ul {
 }
 #scroll #track {
   width: 4px;
-  height: 360px;
+  height: 350px;
   background: rgba(255, 255, 255, 0.5);
 }
 
-#scroll #track #thumb {
+/* #scroll #track #thumb { 
   width: 4px;
   height: 85.75px;
-  background: #ffffff;
-  /* -webkit-transition-duration: 200ms; */
-  /* transition-duration: 200ms; */
-  /* -webkit-transition-timing-function: ease-in-out; */
-  /* transition-timing-function: ease-in-out; */
+  background: #1a142a;
+  -webkit-transition-duration: 200ms;
+  transition-duration: 200ms;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
 }
-
+/* */
 #scroll ul {
   padding: 0;
   margin: 0;
@@ -189,30 +219,29 @@ ul {
 }
 #scroll ul a {
   color: #ffffff;
-  font-family: "Rubik", sans-serif;
   font-weight: 400;
   margin-top: 40px;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 650px) {
   .profile-navbar {
     display: none;
   }
-
 }
 
 @media screen and (max-width: 800px) {
- .vertical-navbar {
-  display: flex;
-  justify-content: space-around;
-align-items: center;
-height: 150px;
-color: #fff;
- }
- .horizontal-navbar {
-  display: none;
- }
- .vertical-navbar #menu {
-  width: 500px;
- }
+  .vertical-navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 150px;
+    color: #fff;
+  }
+  .horizontal-navbar {
+    display: none;
+  }
+  .vertical-navbar #menu {
+    width: 500px;
+  }
 }
