--- a/src/Portfolio/Skills/Skills.css
+++ b/src/Portfolio/Skills/Skills.css
@@ -20,6 +20,10 @@ h2 {
   font-size: 40px;
   padding: 10px;
   text-align: center;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .progress-tech {
   width: 75%;
