--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,5 @@
-@font-face {
-  font-family: "Poppins Medium";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-Medium.ttf");
-}
-@font-face {
-  font-family: "Poppins Regular";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-Regular.ttf");
-}
 
-@font-face {
-  font-family: "Poppins SemiBold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-SemiBold.ttf");
-}
-
-@font-face {
-  font-family: "Poppins Bold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Poppins ExtraBold";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-ExtraBold.ttf");
-}
-
-@font-face {
-  font-family: "Poppins Light";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-Light.ttf");
-}
-
-@font-face {
-  font-family: "Poppins Thin";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../src/assets/fonts/Poppins-Thin.ttf");
-}
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 * {
   outline: none;
 }
@@ -53,14 +7,12 @@
 body {
   margin: 0;
   overflow-y: overlay;
-  font-family: "Poppins Regular";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "DM Sans";
+
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "DM Sans";
 }
 
 ::-webkit-scrollbar {
@@ -86,7 +38,7 @@ body ::-webkit-scrollbar-thumb {
   width: 160px;
   cursor: pointer;
   transition: 0.2s;
-  font-family: "Poppins SemiBold";
+  font-family: "DM Sans";
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
   -ms-transition: 0.2s;
@@ -102,7 +54,7 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .primary-btns {
-  color: var(--white);
+  color: white;
   border: 2px solid linen;
   font-size: 12px;
   background-color: #1f2235;
@@ -120,7 +72,7 @@ body ::-webkit-scrollbar-thumb {
 }
 
 .highlighted-btns {
-  color: var(--white);
+  color: white;
   font-size: 12px;
   background-color: #ff5823;
 }
@@ -128,10 +80,6 @@ body ::-webkit-scrollbar-thumb {
   .highlighted-btns {
     z-index: -900;
   }
-}
-
-.red-border {
-  border: 1px solid var(--error-message) !important;
 }
 
 .fade-in {
