--- a/src/Portfolio/Navbar/Navbar.css
+++ b/src/Portfolio/Navbar/Navbar.css
@@ -4,8 +4,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap
-  ;
+  flex-wrap: wrap;
   width: 100%;
   background-color: #fff;
 }
@@ -16,9 +15,22 @@
 }
 .contact div h3 {
   color: #1a142a;
-
 }
-
+.siteName {
+  box-sizing: border-box;
+  -webkit-filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.8));
+  filter: drop-shadow(0 4px 30px rgba(67, 165, 227, 0.8));
+  height: 70px;
+  position: relative;
+  width: 350px;
+  -webkit-text-fill-color: transparent;
+  background: linear-gradient(272.38deg, #43a5e3 46.06%, #f408e8 81.53%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-size: 40px;
+  padding: 10px;
+  text-align: center;
+}
 .vertical-navbar {
   display: none;
 }
@@ -66,15 +78,20 @@
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
-  -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  -moz-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  -ms-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  -o-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -moz-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -ms-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  -o-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
 
 #menuToggle span:first-child {
@@ -137,9 +154,8 @@
   color: #fff;
   padding: 10px;
   font-size: 32px;
-    text-decoration: none;
-    list-style-type: none;
-
+  text-decoration: none;
+  list-style-type: none;
 }
 
 #menuToggle input:checked ~ ul {
